[package]
name = "bevy-hot-min"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version="0.14.2"}
bevy_dexterous_developer = { version = "0.4.0-alpha.3" }

[features]
hot = ["bevy_dexterous_developer/hot"]

# Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
# In some cases they may still signal poor code quality however, so consider commenting out these lines.
[lints.clippy]
# Bevy supplies arguments to systems via dependency injection, so it's natural for systems to
# request more than 7 arguments -- which triggers this lint.
too_many_arguments = "allow"
# Queries that access many components may trigger this lint.
type_complexity = "allow"


